@@ -1,3 +1,4 @@
+[2024/5/28] Fixed a bug in the saw formspec: you couldn't set the stacksize!?
 [2024/5/28] New formspec for the circular saw: show more nodes in less formspec space.
 [2024/5/27] Improvements to the Outback: more signs, a beacon for the miners' hut, reparable rope, and a message for players trying to get past the realm border.
 [2024/5/27] Channelwood has got a new look: more plants and nicer trees.
